c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/scalar_required/cast_union_to_int.c
// Can't cast union to scalar type even if it has the right size
union u {
    int i;
};

int main(void) {
    union u x = {10};
    return (int)x;
}